; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_gui_photon.c_gui_mch_update.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_gui_photon.c_gui_mch_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@exit_gui_mch_update = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gui_mch_update() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @TRUE, align 4
  store i32 %2, i32* %1, align 4
  %3 = load i32, i32* @exit_gui_mch_update, align 4
  %4 = call i32 @PtAppAddWorkProc(i32* null, i32 %3, i32* %1)
  br label %5

5:                                                ; preds = %15, %0
  %6 = load i32, i32* %1, align 4
  %7 = load i32, i32* @TRUE, align 4
  %8 = icmp eq i32 %6, %7
  br i1 %8, label %9, label %13

9:                                                ; preds = %5
  %10 = call i32 (...) @vim_is_input_buf_full()
  %11 = icmp ne i32 %10, 0
  %12 = xor i1 %11, true
  br label %13

13:                                               ; preds = %9, %5
  %14 = phi i1 [ false, %5 ], [ %12, %9 ]
  br i1 %14, label %15, label %17

15:                                               ; preds = %13
  %16 = call i32 (...) @PtProcessEvent()
  br label %5

17:                                               ; preds = %13
  ret void
}

declare dso_local i32 @PtAppAddWorkProc(i32*, i32, i32*) #1

declare dso_local i32 @vim_is_input_buf_full(...) #1

declare dso_local i32 @PtProcessEvent(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
